# yacap

./: .gitignore  .prettyc  CMakeLists.txt  README.md  TODO.md  arghint.c  arghint.h  builtin.c  builtin.h  carg.c  carg.h  clinic.c  cmdstack.c  cmdstack.h  command.c  command.h  common.c  common.h  completion.bash  completionscript.c  completionscript.h  config.h.in  help.c  help.h  helpers.h  internal.c  internal.h  manifest.h.in  option.c  option.h  optiondb.c  optiondb.h  print.c  print.h  state.h  test_carg.c  tokenizer.c  tokenizer.h  toolbox.h  yacap.c  (+1 more)
examples/: CMakeLists.txt  iproute2.c  minimal.c  quickstart.c
include/: yacap.h
tests/: CMakeLists.txt  helpers.c  helpers.h  mockfd.c  mockfd.h  mockstd.c  mockstd.h  pipewrap.c  pipewrap.h  suggest.c  suggest.h  test_arghint.c  test_autocompletion_bash.c  test_carg.c  test_clog.c  test_command.c  test_command_help.c  test_command_optionorder.c  test_completion_bash.c  test_completionscript.c  test_dashdash.c  test_help.c  test_logverbosity.c  test_option.c  test_option_multiple.c  test_option_parser.c  test_optionarg.c  test_optiondb.c  test_options.c  test_positional.c  test_subcommand.c  test_tokenizer.c  test_verbose.c  test_version.c
